# timnormark.com

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: build-main.yaml  pr-checks.yaml  promote-prod.yaml
apps/web/: Cargo.toml
apps/web/public/: index.html  tools.html
apps/web/public/assets/: site.css  site.js
apps/web/src/: lib.rs  main.rs
deploy/argocd/: README.md  application-prod.yaml  application-staging.yaml
deploy/helm/timnormark-com/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
deploy/helm/timnormark-com/templates/: _helpers.tpl  deployment.yaml  gateway.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: README.md
docs/adr/: 0001-kubernetes-first-aws-architecture.md  0002-gitops-deployment-and-promotion-flow.md  0003-public-repository-policy.md  0004-environment-model.md  0005-implementation-task-sequencing.md
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
ops/static-prod/: docker-compose.yml  nginx.conf
scripts/: promote-digest.sh  validate-delivery.sh
site/: index.html
site/assets/: site.css
